2002-07-02  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* doc/gaphor.dtd: Allow text data in Value tag.
	* gaphor/UML/element.py: Restructured get/set attr stuff. Now it is
	more readable and better usable for e.g. tree models.
	* gaphor/UML/element.py: Changed signal protocol. Now old and new
	values are also parameters.
	* gaphor/diagram/(relationship.py|diagramitem.py|dependency.py):
	new files.
	* gaphor/misc/signal.py: Added signal queueing options (queue(),
	flush())
	* gaphor/misc: Added parsers using both libxml2 or xml.dom.minidom.
	(work in progress).

2002-03-28  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/misc/storage.py: Now use the standard Python XML stuff
	(with expat).
	* Various feature improvements and other nifty things...

2002-03-25  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/registrar.py: renamed to diagramitemfactory.py and
	created a full blown Factory.
	* gaphor/UML/diagram.py: removed create() method
	
2002-03-23  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/diagram.py: moved to the UML module.
	* gaphor/misc/storage.py: now contains the load and save methods of
	ElementFactory.

2002-03-19  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* */Makefile.am: fized path for make install
	* gaphor/UML/*.py: made all files lower case.
	* gaphor/UML/elementfactory.py: New file. Factory for creating model
	elements.
	* gaphor/misc/: New directory. Added Makefile.am, singleton.py and
	command.py.
	* gaphor/UML/element.py: put Enumeration_ and Sequence in separate
	files.
	* configure.in: Added dependency for libxml2.
	* doc/gaphor.dtd: New file. DTD for gaphor files.
	* gaphor/UML/elementfactory.py, gaphor/UML/element.py,
	gaphor/diagram/diagram.py, gaphor/diagram/itemstorage.py:
	Use libxml2 calls rather than xmllib (which is depricated anyway).

2002-03-05  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/relationship.c: (relationship_handle_connect)