@@ -1,3 +1,4 @@
+SUBDIRS = UML diagram tree command ui misc
 
 gaphordir = $(pythondir)/$(subdir)
 
