@@ -1,0 +1,9 @@
+
+commanddir = $(pythondir)/$(subdir)
+
+command_PYTHON = \
+	__init__.py	\
+	loadsave.py
+
+CLEANFILES = *.pyc *.pyo
+
