@@ -58,7 +58,7 @@ class CommentItem(ModelElementItem):
 	self.__border.line(((w - ear, 1), (w- ear, ear), (w, ear), (w - ear, 1),
 			    (1, 1), (1, h), (w, h), (w, ear)))
 	self.__border.request_update()
-	self.__body.update_now()
+	self.update_child(affine, self.__body)
 
     def on_get_shape_iter(self):
 	return self.__border
